<resources>
    <string name="app_name">Gonk Quiz</string>
    <string name="title_appli">Welcome to a quiz about stars wars ( it\'s not true ) </string>
    <string name="info_character">Select your character</string>
    <string name="starting_button">Quick Game</string>
    <string name="answer_true">True</string>
    <string name="answer_false">False</string>
    <string name="content_question" />
    <string name="question_number" />
    <string name="pseudo" />
    <string name="parameters">Custom Game</string>
    <string name="textDifficulty">Difficulty Game</string>
    <string name="textTypeSpinner">Type Game</string>
    <string name="textCategory">Category Game</string>
    <string name="playCustomGame">Play</string>
    <string name="text_numb_question">Number Question</string>
    <string name="type_question" />
    <string name="difficulty_question" />
    <string name="nickName" />
    <string name="scoreTitle">Score :</string>
    <string name="noteResultValue" />
    <string name="resultPageHomeButton">Home</string>
    <string name="resultPageReplayButton">Replay</string>
    <string name="ScoreBoardTitle">ScoreBoard : </string>
    <string name="titleQuestionDifficulty">Difficulty :</string>
    <string name="titleQuestionCategory">Category :</string>
</resources>