<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.ResultActivity">

    <ImageView
        android:id="@+id/resultAvatarZone"
        android:layout_width="163dp"
        android:layout_height="177dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nickNameResult"
        android:layout_width="181dp"
        android:layout_height="23dp"
        android:layout_marginTop="10dp"
        android:text="@string/nickName"
        app:layout_constraintEnd_toEndOf="@+id/resultAvatarZone"
        app:layout_constraintStart_toStartOf="@+id/resultAvatarZone"
        app:layout_constraintTop_toBottomOf="@+id/resultAvatarZone" />

    <TextView
        android:id="@+id/scoreFinal"
        android:layout_width="89dp"
        android:layout_height="25dp"
        android:layout_marginBottom="16dp"
        android:text="@string/scoreTitle"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/noteResult"
        android:layout_width="136dp"
        android:layout_height="25dp"
        android:layout_marginBottom="32dp"
        android:text="@string/noteResultValue"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="361dp"
        android:layout_height="187dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.685"></LinearLayout>

    <Button
        android:id="@+id/result_page_home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="40dp"
        android:text="@string/resultPageHomeButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/result_page_replay_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:text="@string/resultPageReplayButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>